--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
     <div class="page-title dark-background" data-aos="fade"
       style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>About Us</h1>
+        <h1>Tentang Kami</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li class="current">Tentang Kami</li>
           </ol>
         </nav>
       </div>
