--- a/index.html
+++ b/index.html
@@ -178,36 +178,33 @@
       </div>
     </section><!-- /About Section -->
 
-    <!-- About 3 Section -->
     <section id="about-3" class="about-3 section">
 
       <div class="container">
         <div class="row gy-4 justify-content-between align-items-center">
           <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-            <img src="assets/img/img_sq_1.jpg" alt="Image" class="img-fluid">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn">
-              <span class="play"><i class="bi bi-play-fill"></i></span>
+            <img src="assets/img/logo.jpeg" alt="Image" class="img-fluid">
             </a>
           </div>
           <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="content-title mb-4">Plants Make Life Better</h2>
+            <h2 class="content-title mb-4">PT. MATARAM ENERGI EKSPLORASI PRODUKSI</h2>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              necessitatibus placeat, atque qui voluptatem velit explicabo vitae
-              repellendus architecto provident nisi ullam minus asperiores commodi!
-              Tenetur, repellat aliquam nihil illo.
-            </p>
-            <ul class="list-unstyled list-check">
-              <li>Lorem ipsum dolor sit amet</li>
-              <li>Velit explicabo vitae repellendu</li>
-              <li>Repellat aliquam nihil illo</li>
-            </ul>
 
-            <p><a href="#" class="btn-cta">Get in touch</a></p>
+              ABOUT US
+
+              PT. MATARAM ENERGI EKSPLORASI PRODUKSI atau disebut dengan (MEEP) merupakan perusahaan yang bergerak dalam
+              bidang agrikultur dan lingkungan.
+
+              MEEP terbentuk dengan konsep dan visi mengintegrasikan produksi dan distribusi kebutuhan pangan dengan
+              ilmu teknologi dan sistem terbaru.
+
+              Dengan pengalaman terjun di lapangan dan pemahaman akan pasar serta kebutuhan pokok pangan dalam negeri,
+              maka PT. MATARAM ENERGI EKSPLORASI PRODUKSI telah siap mengemban tugas dalam pemenuhan kebutuhan ketahanan
+              pangan nasional dan kemandirian produksi dalam negeri.
           </div>
         </div>
       </div>
-    </section><!-- /About 3 Section -->
+    </section>
 
     <!-- Services 2 Section -->
     <section id="services-2" class="services-2 section dark-background">
