--- a/services.html
+++ b/services.html
@@ -98,7 +98,6 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Services Section -->
     <section id="services" class="services section">
 
       <!-- Section Title -->
@@ -114,6 +113,9 @@
                 <span class="number">01</span>
                 <div class="service-item-content">
                   <h3 class="service-heading">PT Mataram Energi Eksplorasi Produksi Mendukung Kemenhan</h3>
+                  <div class="service-item-icon">
+                    <img src="assets/img/programs/kemenhan.png" alt="" srcset="">
+                  </div>
                   <p>
                     PT. MATARAM ENERGI EKSPLORASI INDUSTRI secara otomatis telah menjadi mitra dengan menjalankan program program dukungan terhadap ketahanan pangan atau program food estate <br /> <br> <br><br>
                   </p>
@@ -125,6 +127,9 @@
                 <span class="number">02</span>
                 <div class="service-item-content">
                   <h3 class="service-heading">PT Mataram Energi Eksplorasi Produksi dan Energi Terbarukan</h3>
+                  <div class="service-item-icon">
+                    <img src="assets/img/programs/sustainable.png" alt="">
+                  </div>
                   <p>
                     PT Mataram Energi Eksplorasi Produksi dan Energi Terbarukan telah mulai melakukan berbagtai pembenahan dengan teknologi energi terbarukan (Sustainable Energy) dan juga telah mengajak petani, peternak, dan pengusahan komoditi lokal agar dapat bermigrasi terhadap system yang telah diterapkan dunia tersebut
                   </p>
@@ -136,6 +141,9 @@
                 <span class="number">03</span>
                 <div class="service-item-content">
                   <h3 class="service-heading">PT Mataram Energi Eksplorasi Produksi Big Plan</h3>
+                  <div class="service-item-icon">
+                    <img src="assets/img/programs/bigplan.png" alt="">
+                  </div>
                   <p>
                     PT Mataram Energi Eksplorasi Produksi memiliki sebuah perencanaan besar dengan adanya timbang perencanaan (Planning Programming) yang terus tumbuh sesuai dengan kebutuhan baik jangka Pendek (Short Phase) dan Jangka Panjang (Long Phase) dengan system ROADMAP dimana merupakan target produksi dan investasi
                   </p>
