--- a/index.html
+++ b/index.html
@@ -211,63 +211,29 @@
     <section class="testimonials-12 testimonials section" id="testimonials">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>TESTIMONIALS</h2>
-        <p>Necessitatibus eius consequatur</p>
+        <h2>Kemitraan</h2>
+        <p>Beberapa Mitra kami</p>
       </div><!-- End Section Title -->
 
       <div class="testimonial-wrap">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 mb-4 mb-md-4">
+            <div class="col-md-4 mb-4 mb-md-4 p-4 items">
               <div class="testimonial">
-                <img src="assets/img/testimonials/testimonials-1.jpg" alt="Testimonial author">
-                <blockquote>
-                  <p>
-                    “Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Provident deleniti iusto molestias, dolore vel fugiat
-                    ab placeat ea?”
-                  </p>
-                </blockquote>
-                <p class="client-name">James Smith</p>
+                <img src="assets/img/kemitraan/kemenhan.jpg" alt="Kemitraan">
+                <p class="client-name">Kementrian Pertahanan Republik Indonesia</p>
               </div>
             </div>
-            <div class="col-md-6 mb-4 mb-md-4">
+            <div class="col-md-4 mb-4 mb-md-4 p-4">
               <div class="testimonial">
-                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Testimonial author">
-                <blockquote>
-                  <p>
-                    “Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Provident deleniti iusto molestias, dolore vel fugiat
-                    ab placeat ea?”
-                  </p>
-                </blockquote>
-                <p class="client-name">Kate Smith</p>
+                <img src="assets/img/kemitraan/koperasi.png" alt="Kemitraan" style="width: 140px;">
+                <p class="client-name">Koperasi Induk Nasional</p>
               </div>
             </div>
-            <div class="col-md-6 mb-4 mb-md-4">
+            <div class="col-md-4 mb-4 mb-md-4 p-4">
               <div class="testimonial">
-                <img src="assets/img/testimonials/testimonials-3.jpg" alt="Testimonial author">
-                <blockquote>
-                  <p>
-                    “Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Provident deleniti iusto molestias, dolore vel fugiat
-                    ab placeat ea?”
-                  </p>
-                </blockquote>
-                <p class="client-name">Claire Anderson</p>
-              </div>
-            </div>
-            <div class="col-md-6 mb-4 mb-md-4">
-              <div class="testimonial">
-                <img src="assets/img/testimonials/testimonials-4.jpg" alt="Testimonial author">
-                <blockquote>
-                  <p>
-                    “Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Provident deleniti iusto molestias, dolore vel fugiat
-                    ab placeat ea?”
-                  </p>
-                </blockquote>
-                <p class="client-name">Dan Smith</p>
+                <img src="assets/img/kemitraan/gapoktan.png" alt="Testimonial author">
+                <p class="client-name">Gabungan Kelompok Tani (Gapoktan)</p>
               </div>
             </div>
           </div>
