--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="AgriCulture">
-        <!-- <h1 class="sitename">AgriCulture</h1>  -->
+        <img src="assets/img/logo.png" alt="AgriCulture" >
+        <h1 class="sitename">PT. MEEP</h1> 
       </a>
 
       <nav id="navmenu" class="navmenu">
