--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <ul>
           <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="about.html">Tentang Kami</a></li>
-          <li><a href="testimonials.html">Kemitraan</a></li>
-          <li><a href="blog.html">Visi Misi</a></li>
+          <li><a href="kemitraan.html">Kemitraan</a></li>
+          <li><a href="visi-misi.html">Visi Misi</a></li>
           <li><a href="contact.html">Kontak Kami</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -142,37 +142,14 @@
             <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="content-subtitle text-white opacity-50">Kenapa Memilih Kami?</h3>
               <h2 class="content-title mb-4">
-                More than <strong>50 year experience</strong> in agriculture
-                industry
+                PT. MATARAM ENERGI EKSPLORASI INDUSTRI
               </h2>
               <p class="opacity-50">
-                Reprehenderit, odio laboriosam? Blanditiis quae ullam quasi illum
-                minima nostrum perspiciatis error consequatur sit nulla.
+                Karena kami Memiliki pengetahuan dan kemampuan dapat mengembangkan bisnis UMKM sehingga dapat mandiri dan memenuhi standart kualitas ketahanan pangan dan memiliki peluang eksport dengan program kemitraan yang dimiliki oleh PT.MATARAM ENERGI EKSPLORASI INDUSTRI dengan berbagi teknologi terapan yang suesuai dengan peruntukan dan era modernisasi ini.
               </p>
-
-              <div class="row my-5">
-                <div class="col-lg-12 d-flex align-items-start mb-4">
-                  <i class="bi bi-cloud-rain me-4 display-6"></i>
-                  <div>
-                    <h4 class="m-0 h5 text-white">Plants needs rain</h4>
-                    <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-                <div class="col-lg-12 d-flex align-items-start mb-4">
-                  <i class="bi bi-heart me-4 display-6"></i>
-                  <div>
-                    <h4 class="m-0 h5 text-white">Love organic foods</h4>
-                    <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-                <div class="col-lg-12 d-flex align-items-start">
-                  <i class="bi bi-shop me-4 display-6"></i>
-                  <div>
-                    <h4 class="m-0 h5 text-white">Sell vegies</h4>
-                    <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
+              <p class="opacity-50">
+                PT.MATARAM ENERGI EKSPLORASI INDUSTRI sadar bahwa program kemitraan dengan UMKM menciptakan peluang lebih berharga dari pada sekedar memberikan modal, karena program kemitraan inijuga mencari konsep hulu dan hilir dari produsen dan konsumen baik di pasar lokal maupun international
+              </p>
             </div>
           </div>
         </div>
@@ -253,57 +230,24 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">AgriCulture</span>
+              <span class="sitename">PT. MATARAM ENERGI EKSPLORASI PRODUKSI</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p>Kamandungan, Karaton Surakarta, Desa/Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
+              <p>Kota Surakarta, Provinsi Jawa Tengah 57153</p>
+              <p class="mt-3"><strong>Phone:</strong> <span>0271641243</span></p>
+              <p><strong>Email:</strong> <span>ptmataramenergi@gmail.com</span></p>
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
+          <div class="col-lg-8 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
-            <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
-            <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
+              <li><a href="index.html" class="active">Beranda</a></li>
+          <li><a href="about.html">Tentang Kami</a></li>
+          <li><a href="kemitraan.html">Kemitraan</a></li>
+          <li><a href="visi-misi.html">Visi Misi</a></li>
+          <li><a href="contact.html">Kontak Kami</a></li>
             </ul>
           </div>
 
@@ -316,14 +260,7 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div>
-            © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            © Copyright <strong><span>PT MATARAM ENERGI EKSPLORASI PRODUKSI</span></strong>. All Rights Reserved
           </div>
         </div>
 
