--- a/visi-misi.html
+++ b/visi-misi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Visi Misi - PT. MATARAM ENERGI EKSPLORASI PRODUK</title>
+  <title>PT. MATARAM ENERGI EKSPLORASI PRODUK</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
