--- a/index.html
+++ b/index.html
@@ -167,9 +167,6 @@
           <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
             <h2 class="content-title mb-4">PT. MATARAM ENERGI EKSPLORASI PRODUKSI</h2>
             <p class="mb-4">
-
-              ABOUT US
-
               PT. MATARAM ENERGI EKSPLORASI PRODUKSI atau disebut dengan (MEEP) merupakan perusahaan yang bergerak dalam
               bidang agrikultur dan lingkungan.
 
@@ -183,6 +180,61 @@
         </div>
       </div>
     </section>
+
+    <!-- Team Section -->
+    <section class="team-15 team section" id="team">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Management</h2>
+        <p>PT. MATARAM ENERGI EKSPLORASI KREATIF</p>
+      </div><!-- End Section Title -->
+
+      <div class="content">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="person">
+                <figure>
+                  <img src="assets/img/team/team-1.png" alt="DR.K.P.Eddy S Wirabhumi.SH,MM" class="img-fluid">
+                </figure>
+                <div class="person-contents">
+                  <h3>DR.K.P.Eddy S Wirabhumi.SH,MM</h3>
+                  <span class="position">Direktur Utama</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="person">
+                <figure>
+                  <img src="assets/img/team/team-2.png" alt="B.R.Aj Lung Ayu. SH" class="img-fluid">
+                </figure>
+                <div class="person-contents">
+                  <h3>B.R.Aj Lung Ayu. SH</h3>
+                  <span class="position">Direktur</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="person">
+                <figure>
+                  <img src="assets/img/team/team-3.png" alt="B.R.Aj Sedhah Mirah" class="img-fluid">
+                </figure>
+                <div class="person-contents">
+                  <h3>B.R.Aj Sedhah Mirah</h3>
+                  <span class="position">Komisaris</span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </section><!-- /Team Section -->
+
 
     <!-- Testimonials Section -->
     <section class="testimonials-12 testimonials section" id="testimonials">
