--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,8 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h4>Email:</h4>
-                  <p>ptmataramenergi@gmail.com</p>
+                  <p>Mataramenergi.surakarta@gmail.com</p>
+                  <p>Mataram.eep@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
