--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <p class="client-name">Gabungan Kelompok Tani (Gapoktan)</p>
               </div>
             </div>
-            <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg">Download Client Information Sheet</a>
+            <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg" style="margin-left: 12px; margin-right: 12px;">Download Client Information Sheet</a>
           </div>
         </div>
       </div>
