--- a/index.html
+++ b/index.html
@@ -265,10 +265,15 @@
                 <p class="client-name">Gabungan Kelompok Tani (Gapoktan)</p>
               </div>
             </div>
-            <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg" style="margin-left: 12px; margin-right: 12px;">Download Client Information Sheet</a>
           </div>
         </div>
       </div>
+      <div style="display: flex; justify-content: center; margin-left: 12px; margin-right: 12px;">
+        <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg" style="width: 100%;">
+            Download Client Information Sheet
+        </a>
+    </div>
+    
     </section><!-- /Testimonials Section -->
     
 
