--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
               <p>Kamandungan, Karaton Surakarta, Desa/Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
               <p>Kota Surakarta, Provinsi Jawa Tengah 57153</p>
               <p class="mt-3"><strong>Phone:</strong> <span>0271641243</span></p>
-              <p><strong>Email:</strong> <span>ptmataramenergi@gmail.com</span></p>
+              <p><strong>Email:</strong> <span>Mataram.eep@gmail.com</span></p>
             </div>
           </div>
 
