--- a/index.html
+++ b/index.html
@@ -268,10 +268,13 @@
           </div>
         </div>
       </div>
-      <div style="display: flex; justify-content: center; margin-left: 12px; margin-right: 12px;">
-        <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg" style="width: 100%;">
+      <div style="margin-left: 12px; margin-right: 12px;">
+        <a href="assets/CIS_PT._MATARAM_ENERGI_2024[1]-1.docx" class="btn btn-primary btn-lg" style="width: 100%; margin-bottom: 1em;">
             Download Client Information Sheet
         </a>
+        <a href="assets/PT.MEEP_REV_6.pdf" class="btn btn-success btn-lg" style="width: 100%;">
+          Download CV
+      </a>
     </div>
     
     </section><!-- /Testimonials Section -->
@@ -292,8 +295,8 @@
               <span class="sitename">PT. MATARAM ENERGI EKSPLORASI PRODUKSI</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>Kamandungan, Karaton Surakarta, Desa/Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
-              <p>Kota Surakarta, Provinsi Jawa Tengah 57153</p>
+              <p>Kamandungan, Karaton Surakarta, Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
+              <p>Kota Surakarta, Provinsi Jawa Tengah 57144</p>
               <p class="mt-3"><strong>Phone:</strong> <span>0271641243</span></p>
               <p><strong>Email:</strong> <span>Mataram.eep@gmail.com</span></p>
             </div>
