--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Lokasi</h4>
-                  <p>Kamandungan, Karaton Surakarta, Desa/Kelurahan Baluwarti, Kec. Pasar Kliwon, Kota Surakarta, Provinsi Jawa Tengah, 57153</p>
+                  <p>Kamandungan, Karaton Surakarta, Kelurahan Baluwarti, Kec. Pasar Kliwon, Kota Surakarta, Provinsi Jawa Tengah, 57144</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -136,8 +136,8 @@
               <span class="sitename">PT. MATARAM ENERGI EKSPLORASI PRODUKSI</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>Kamandungan, Karaton Surakarta, Desa/Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
-              <p>Kota Surakarta, Provinsi Jawa Tengah 57153</p>
+              <p>Kamandungan, Karaton Surakarta, Kelurahan Baluwarti, Kec. Pasar Kliwon</p>
+              <p>Kota Surakarta, Provinsi Jawa Tengah 57144</p>
               <p class="mt-3"><strong>Phone:</strong> <span>0271641243</span></p>
               <p><strong>Email:</strong> <span>Mataram.eep@gmail.com</span></p>
             </div>
